--- a/app/pages/blog-post/index.html
+++ b/app/pages/blog-post/index.html
@@ -7,7 +7,7 @@
     <title>Blog Post</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="../../pages/login/index.js" async></script>
+    <script src="../../pages/blog-post/index.js" async></script>
 </head>
 
 <body>
