--- a/app/pages/not-found/index.html
+++ b/app/pages/not-found/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Post</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="../../pages/blog-post/index.js" async></script>
 </head>
 
 <body>
@@ -37,10 +36,7 @@
       </nav>
 
       <section class="body-info">
-          <h1 id="blog-title">Blog Title</h1>
-          <hr>
-          <h2 id="blog-description">Blog Description</h2>
-          <p id="blog-markdown">Blog Markdown</p>
+          <h1>Page Not Found</h1>
       </section>
 </body>
 
