--- a/app/pages/blog-post/index.html
+++ b/app/pages/blog-post/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#">MY PROFILE</a>
         </li>
       </ul>
-      <button class="sign-out-btn">SIGN OUT</button>
+      <button class="sign-out-btn" onclick="logOut()">SIGN OUT</button>
     </div>
   </nav>
 
