--- a/app/pages/not-found/index.html
+++ b/app/pages/not-found/index.html
@@ -2,42 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page Not Found</title>
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="./js/index.js" defer></script>
 </head>
 
 <body>
-    <!-- Will add this to a partial view -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <p class="nav-logo"><span>TEAM</span><span>08</span></p>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-links" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">ALL ARTICLES <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">SUBSCRIPTIOINS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">MY ARTICLES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">MY PROFILE</a>
-            </li>
-          </ul>
-          <button class="sign-out-btn">SIGN OUT</button>
-        </div>
-      </nav>
+  <!-- Will add this to a partial view -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <p class="nav-logo"><span>TEAM</span><span>08</span></p>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse nav-links" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">ALL ARTICLES <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">SUBSCRIPTIOINS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">MY ARTICLES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">MY PROFILE</a>
+        </li>
+      </ul>
+      <button class="sign-out-btn" onclick="logOut()">SIGN OUT</button>
+    </div>
+  </nav>
 
-      <section class="body-info">
-          <h1>Page Not Found</h1>
-      </section>
+  <section class="body-info">
+    <h1>Page Not Found</h1>
+  </section>
 </body>
 
 </html>
