--- a/app/pages/blogs/index.html
+++ b/app/pages/blogs/index.html
@@ -7,14 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="./pages/blogs/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="./pages/blogs/index.js" defer></script>
+    <script src="./js/index.js" defer></script>
     <title>Blogs</title>
 </head>
 
 <body>
-    <h1 class="mb-4 center-title">Blogs</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <p class="nav-logo"><span>TEAM</span><span>08</span></p>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav-links" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/blogs">ALL BLOGS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blogs/subscriptions">SUBSCRIPTIONS </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profile">MY PROFILE</a>
+                </li>
+            </ul>
+            <button class="sign-out-btn" onclick="logOut()">SIGN OUT</button>
+        </div>
+    </nav>
+
     <div class="container" id="blog-list">
         <div class="card mt-4" id="empty-placeholder">
             <div class="card-body">
