--- a/app/pages/profile/index.html
+++ b/app/pages/profile/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="./pages/profile/index.js" defer></script>
   <script src="./js/index.js" defer></script>
+  <title>Profile</title>
 </head>
 
 <body>
@@ -22,16 +23,13 @@
     </button>
     <div class="collapse navbar-collapse nav-links" id="navbarNav">
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/blogs">ALL BLOGS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blogs/subscriptions">SUBSCRIPTIONS</a>
+        </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">ALL ARTICLES <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">SUBSCRIPTIOINS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">MY ARTICLES</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">MY PROFILE</a>
         </li>
       </ul>
