--- a/app/pages/profile/index.html
+++ b/app/pages/profile/index.html
@@ -60,6 +60,7 @@
 
       <button onclick="openEditAbout()" type="button" id="open-btn" class="btn btn-primary">Edit About</button>
     </section>
+    <a href="/post/add" class="btn btn-secondary mt-2">Add</a>
   </section>
 </body>
 
