Updated subscriptions page

--- a/app/pages/blogs/index.html
+++ b/app/pages/blogs/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="/blogs">ALL BLOGS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blogs/subscriptions">SUBSCRIPTIONS </a>
+                    <a class="nav-link" href="/subscriptions">SUBSCRIPTIONS </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/profile">MY PROFILE</a>
