--- a/app/pages/profile/index.html
+++ b/app/pages/profile/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/blogs">ALL BLOGS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/blogs/subscriptions">SUBSCRIPTIONS</a>
+          <a class="nav-link" href="/subscriptions">SUBSCRIPTIONS</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">MY PROFILE</a>
