--- a/app/pages/subscriptions/index.html
+++ b/app/pages/subscriptions/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../../css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="./pages/blogs/index.js" defer></script>
+	<script src="./pages/subscriptions/index.js" defer></script>
 	<script src="./js/index.js" defer></script>
 	<title>Subscriptions</title>
 </head>
