--- a/app/pages/blog-post/index.html
+++ b/app/pages/blog-post/index.html
@@ -14,27 +14,16 @@
 
 <body>
   <!-- Will add this to a partial view -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <p class="nav-logo"><span>TEAM</span><span>08</span></p>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse nav-links" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/blogs">ALL BLOGS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/subscriptions">SUBSCRIPTIONS </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">MY PROFILE</a>
-        </li>
-      </ul>
-      <button class="sign-out-btn" onclick="logOut()">SIGN OUT</button>
-    </div>
-  </nav>
+  <div id="nav-placeholder" style="all: initial; font-family: inherit;"></div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script>
+      $(function(){
+      $("#nav-placeholder").load("../../html/NavBar.html");
+      });
+  </script>
 
   <section class="body-info">
     <h1 id="blog-title">Blog Title</h1>
