Formatted code and fixed db link bug

--- a/app/pages/subscriptions/index.html
+++ b/app/pages/subscriptions/index.html
@@ -14,22 +14,27 @@
 </head>
 
 <body>
-  <div id="nav-placeholder" style="all: initial; font-family: inherit;"></div>
+	<div id="nav-placeholder" style="all: initial; font-family: inherit;"></div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script>
-      $(function(){
-      $("#nav-placeholder").load("../../html/NavBar.html");
-      });
-  </script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
+	<script>
+		$(function () {
+			$("#nav-placeholder").load("../../html/NavBar.html");
+		});
+	</script>
 
 	<div class="container" id="blog-list">
 		<div class="card mt-4" id="empty-placeholder">
 			<div class="card-body">
 				<h4>Looks like there's nothing here</h4>
-				<div class="card-text mb-2">We couldn't find any blogs. Be the first to make a new one!</div>
+				<div class="card-text mb-2">We couldn't find any subscribed blogs. Please subscribe to a blog.</div>
 			</div>
 		</div>
 	</div>
